syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.zup.edu";
option java_outer_classname = "PropostasGrpc";
option objc_class_prefix = "HLW";

package br.com.zup.edu;

import "google/protobuf/timestamp.proto";

service PropostasGrpcService {
  rpc create (CreateProposalRequest) returns (CreateProposalResponse) {}
}


message CreateProposalRequest{
  string document = 1;
  string email = 2;
  string name = 3;
  string address = 4;
  string salary = 5;
}

message CreateProposalResponse{
  string propostaId=1;
  google.protobuf.Timestamp createdAt = 2;


}
